--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAzMjk0NzA4Mjg3MDQwMzE3NA.GMEgRl.54XJ85BD1IevINq06yy0kIcTnW0F-d8Iv4NGwE
+token=MTAzMjk0NzA4Mjg3MDQwMzE3NA.GIT7xT.H4Xlk_qwCkoazl253szKfSTvNfGSWoxqGfUw_o
