--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cwhitee/CountryDiscordBot#readme",
   "dependencies": {
     "@discordjs/rest": "^1.3.0",
+    "amplify": "^0.0.11",
     "chalk": "^4.1.2",
     "discord": "^0.8.2",
     "discord-api-types": "^0.37.14",
