--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAzMjk0NzA4Mjg3MDQwMzE3NA.GIT7xT.H4Xlk_qwCkoazl253szKfSTvNfGSWoxqGfUw_o
+token=MTAzMjk0NzA4Mjg3MDQwMzE3NA.GKF3-U.jRL_SQOKXkodYJ0zWEO06zmqAzkhALRIqG7QRI
